# Story_CoWriting

./: AUTHORS  CMakeLists.txt  README.md  package.xml  setup.py
Django/: db.sqlite3  document.json  manage.py  models.py  text.txt
Django/Bd_backup/: bd.sql
Django/StoryCoWriting/: settings.py  urls.py  wsgi.py
Django/story/: admin.py  models.py  models_old.py  post.py  serializers.py  urls.py  views.py  views_old.py
Django/story/migrations/: 0001_initial.py  0002_chti_dance_fullst_gender_ticks_weapons.py  0003_place.py
Django/story/static/: style.css
Django/story/templates/: add_story.html  add_story2.html  bad_actions.html  base.html  footer.html  form-template.html  header.html  index.html  left_menu.html  story.html
Django/story/templates/story/: story_form.html
launch/: mutual_modelling_for_cowriter.launch  story_cowriting.launch
nodes/: cowriter_agents_info.py  cowriter_mutual_modelling.py  gaze_behavior.py  interface _test.py  interface.py  interface_test.py  main_activity.py  multiframes.py  nao_actions.py
share/: list_of_items
src/: cowriter_agents_info.py  cowriter_mutual_modelling.py  human_robot.py  story_gestures.py
src/mutualModelling/: .model2.py.swp  agent.py  agent2.py  model.py  model2.py  mutual_models.py  reasoning.py
src/mutual_modeling/: model.py
src/mutual_modelling/: model.py
src/nextChoice/: decision.py  decision2.py  decision3.py  story_maker.py
tools/: beehive_game.py  collectors.py  coordination_task.py  coordination_task2.py  coordination_task3.py  cowriter_simu.py  log2csv.py  multi_bee.py  prisoners_dilemma.py  story_maker.py  teacher_learner.py  teacher_learner_noise.py  teacher_learner_noise2.py  test_model.py
tools/log_analysis/: au.py  gift_simu.py  history_panda  juge.py  pred.py  seaborn_barplot  target.py  to_csv  withmeness.py
~dev/share/doc/nextChoice/: AUTHORS  LICENSE
