<?xml version="1.0"?>
<package>
  <name>mutual_modelling</name>
  <version>0.1.0</version>
  <description>incoming</description>

  <maintainer email="alexis.jacq@epfl.ch">Alexis Jacq</maintainer>
  <license>BSD</license>
  <author email="alexis.jacq@epfl.ch">Alexis Jacq</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>openface_tracker</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>openface_tracker</run_depend>

</package>
